--- a/MinhHieuShop.Web/Views/Admin/Index.cshtml
+++ b/MinhHieuShop.Web/Views/Admin/Index.cshtml
@@ -209,22 +209,18 @@
                         <a href="#">
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
-                        <ul class="treeview-menu">
-                            <li><a ui-sref="products"><i class="fa fa-circle-o"></i> Product</a></li>
-                            <li><a ui-sref="product_add"><i class="fa fa-circle-o"></i> Add Product</a></li>
-                        </ul>
+                       
                     </li>
                     <li class="treeview">
                         <a href="#">
                             <i class="fa fa-files-o"></i>
-                            <span>Layout Options</span>
+                            <span>Sản phẩm</span>
                             <span class="label label-primary pull-right">4</span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                            <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                            <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                            <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                            <li><a ui-sref="product_categories"><i class="fa fa-circle-o"></i> Danh mục sản phẩm</a></li>
+                            <li><a ui-sref="products"><i class="fa fa-circle-o"></i> Sản phẩm</a></li>
+                          
                         </ul>
                     </li>
                     <li>
@@ -348,7 +344,7 @@
 
 
 
-        </div><!-- /.content-wrapper tùy chỉnh nội dung ở đây. -------------------------------------------------------------------------------------> 
+        </div><!-- /.content-wrapper tùy chỉnh nội dung ở đây. ------------------------------------------------------------------------------------->
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 2.3.0
@@ -533,8 +529,13 @@
     <script src="~/Assets/admin/libs/angular/angular.js"></script>
     <script src="~/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="~/app/shared/modules/minhhieushop.common.js"></script>
+    <script src="~/app/components/product_categories/productCategories.module.js"></script>
+    <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
+
     <script src="~/app/app.js"></script>
+
+    <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
