--- a/MinhHieuShop.Web/Views/Admin/Index.cshtml
+++ b/MinhHieuShop.Web/Views/Admin/Index.cshtml
@@ -209,7 +209,7 @@
                         <a href="#">
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
-                       
+
                     </li>
                     <li class="treeview">
                         <a href="#">
@@ -220,7 +220,7 @@
                         <ul class="treeview-menu">
                             <li><a ui-sref="product_categories"><i class="fa fa-circle-o"></i> Danh mục sản phẩm</a></li>
                             <li><a ui-sref="products"><i class="fa fa-circle-o"></i> Sản phẩm</a></li>
-                          
+
                         </ul>
                     </li>
                     <li>
@@ -529,6 +529,7 @@
     <script src="~/Assets/admin/libs/angular/angular.js"></script>
     <script src="~/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="~/app/shared/modules/minhhieushop.common.js"></script>
+    <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
@@ -540,6 +541,7 @@
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
+
 
     <script src="~/Assets/admin/js/demo.js"></script>
 </body>
