--- a/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
@@ -22,17 +22,17 @@
             </div>
         </div>
         <div class="box-body">
-            <div class="row">
+            <div class="row" style="margin-bottom:10px">
                 <div class="col-md-6">
-                    <div class="input-group" style="margin-bottom:10px">
-
+                    <div class="input-group">
                         <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa">
-
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button" ng-click="search()">Tìm kiếm</button>
                         </span>
-
                     </div><!-- /input-group -->
+                </div>
+                <div class="col-md-6" style="float:left">
+                    <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
                 </div>
             </div>
             <div class="row">
