Done sửa danh mục

--- a/MinhHieuShop.Web/Views/Admin/Index.cshtml
+++ b/MinhHieuShop.Web/Views/Admin/Index.cshtml
@@ -533,6 +533,7 @@
     <script src="~/Assets/admin/libs/toastr/toastr.js"></script>
     <script src="~/app/shared/modules/minhhieushop.common.js"></script>
     <script src="~/app/shared/services/notificationService.js"></script>
+    <script src="~/app/shared/services/commonService.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
@@ -544,6 +545,7 @@
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
