--- a/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
@@ -58,11 +58,11 @@
                                 </span>
                             </td>
                             <td>
-                                <button class="btn btn-sm btn-primary"><i class="fa fa-pencil"></i></button>
+                                <button class="btn btn-sm btn-primary" ui-sref="edit_product_category({id:item.ID})"><i class="fa fa-pencil"></i></button>
                                 <button class="btn  btn-sm btn-danger"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
-                        <tfoot>
+                        <tfoot> 
                             <tr>
                                 <td colspan="5"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span></td>
                             </tr>
