--- a/MinhHieuShop.Web/Views/Admin/Index.cshtml
+++ b/MinhHieuShop.Web/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
-  
+
 
     <link href="~/Assets/admin/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Font Awesome -->
@@ -17,6 +17,7 @@
     <!-- Theme style -->
     <link href="~/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
     <link href="~/Assets/admin/css/AdminLTE.min.css" rel="stylesheet" />
+    <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
 
