--- a/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MinhHieuShop.Web/app/components/product_categories/productCategoryListView.html
@@ -33,12 +33,14 @@
                 </div>
                 <div class="col-md-6" style="float:left">
                     <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+                    <button class="btn btn-danger" ng-click="deleteMultiple()">Xóa</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-bordered">
                         <tr>
+                            <th><input name="all" type="checkbox" ng-click="selectAll()"/></th>
                             <th style="width: 5%">ID</th>
                             <th style="width:55%">Tên danh mục</th>
                             <th style="width: 20%">Ngày tạo</th>
@@ -46,6 +48,7 @@
                             <th style="width: 10%">Thao tác</th>
                         </tr>
                         <tr ng-repeat="item in productCategories">
+                            <td><input type="checkbox" ng-model="item.checked" name="all"</td>
                             <td>{{item.ID}}</td>
                             <td>{{item.Name}}</td>
                             <td>
