--- a/MinhHieuShop.Web/app/components/products/productListView.html
+++ b/MinhHieuShop.Web/app/components/products/productListView.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="box-body">
-            <di class="row">
+            <div class="row">
                 <div class="col-md-6">
                     <div class="input-group">
                         <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa">
@@ -35,7 +35,7 @@
                     <button class="btn btn-success" ui-sref="product_add">Thêm mới</button>
                     <button class="btn btn-danger" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
                 </div>
-            </di>
+            </div>
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-bordered">
@@ -61,7 +61,7 @@
                                 </span>
                             </td>
                             <td>
-                                <button class="btn btn-sm btn-primary" ui-sref="edit_product({id:item.ID})"><i class="fa fa-pencil"></i></button>
+                                <button class="btn btn-sm btn-primary" ui-sref="product_edit({id:item.ID})"><i class="fa fa-pencil"></i></button>
                                 <button class="btn  btn-sm btn-danger" ng-click="deleteProduct(item.ID)"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
