--- a/MinhHieuShop.Web/Views/Admin/Index.cshtml
+++ b/MinhHieuShop.Web/Views/Admin/Index.cshtml
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
     <link href="~/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
+    <link href="~/Assets/admin/libs/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
+
+
     <link href="~/Assets/admin/css/AdminLTE.min.css" rel="stylesheet" />
     <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -30,7 +33,7 @@
     <![endif]-->
 
 </head>
-<body class="hold-transition skin-blue sidebar-mini" ng-app="minhhieushop"  ng-controller="rootController">
+<body class="hold-transition skin-blue sidebar-mini" ng-app="minhhieushop" ng-controller="rootController">
     <div ui-view></div>
     <!-- Site wrapper -->
     <!-- jQuery 2.1.4 -->
@@ -58,26 +61,34 @@
     <script src="~/Assets/admin/libs/ngBootbox/ngBootbox.js"></script>
     <script src="~/Assets/admin/libs/ng-ckeditor/ng-ckeditor.js"></script>
     <script src="~/Assets/admin/libs/ckfinder/ckfinder.js"></script>
+    <script src="~/Assets/admin/libs/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="~/Assets/admin/libs/angular-loading-bar/build/loading-bar.js"></script>
+
 
     <script src="~/app/shared/modules/minhhieushop.common.js"></script>
     <script src="~/app/shared/services/notificationService.js"></script>
     <script src="~/app/shared/services/commonService.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
-    <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
-    <script src="~/app/components/products/products.module.js"></script>
+    <script src="~/app/shared/services/authData.js"></script>
+    <script src="~/app/shared/services/authenticationService.js"></script>
+    <script src="~/app/shared/services/loginService.js"></script>
+
+
 
     <script src="~/app/app.js"></script>
 
+    <script src="~/app/components/product_categories/productCategories.module.js"></script>
+    <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
-    <script src="~/app/components/home/homeController.js"></script>
 
+    <script src="~/app/components/home/homeController.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
     <script src="~/app/components/login/loginController.js"></script>
     <script src="~/Assets/admin/js/demo.js"></script>
